Fixed CSS stretching

--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -33,7 +33,7 @@ section#sponsors {
   #sponsors-box {
     padding-left: 8vw;
     padding-right: 8vw;
-    max-width: initial;
+    max-width: 80vw;
   }
 }
 
@@ -65,7 +65,8 @@ section#sponsors {
   padding-left: 5%;
   padding-right: 5%;
   margin-top: 20px;
-  min-width: 100pt;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .company-logo {
@@ -80,7 +81,6 @@ section#sponsors {
   padding-left: 5%;
   padding-right: 5%;
   margin-top: 5px;
-  min-width: 100pt;
   opacity: 1;
   -webkit-transition: opacity 0.2s ease-in-out;
   transition: opacity 0.2s ease-in-out;
@@ -88,6 +88,7 @@ section#sponsors {
   padding: 8px;
   border-radius: 8px;
   background-color: white;
+  max-width: 10vw;
 }
 
 .company-logo:hover {
